# JNIDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/huzhengbiao/jnidemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/huzhengbiao/jnidemo/: MainActivity.java  MyJniUtils.java
app/src/main/jni/: com_example_huzhengbiao_jnidemo_MyJniUtils.h  name.cpp
app/src/test/java/com/example/huzhengbiao/jnidemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
